--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -204,6 +204,7 @@ body:not( .home-page ){
 #menu-wrapper{
   padding-bottom: 2em;
   // overflow: auto;
+  overflow-x: hidden;
   overflow-y: auto;
   top: 0;
   left: 0;
